--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "phase-2-challenge",
   "version": "1.0.0",
-  "description": "Phase 2 Challenge for Learner's Guild",
+  "description": "Phase 2 Challenge for Learners Guild",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
   "author": "James McCormack",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.1.2"
+  }
 }
